Retain MessagePortChannel for transfer when disentangling ports https://bugs.webkit.org/show_bug.cgi?id=184502 <rdar://problem/39372771>

Patch by Tadeu Zagallo <tzagallo@apple.com> on 2018-04-17
Reviewed by Geoffrey Garen.

Source/WebCore:

MessagePortChannels should be retained while ports are being transferred, but that was only
happening when sending a port through another port, but not when sending it through a worker.

Test: workers/worker-to-worker.html

* dom/messageports/MessagePortChannel.cpp:
(WebCore::MessagePortChannel::entanglePortWithProcess):
(WebCore::MessagePortChannel::disentanglePort):
(WebCore::MessagePortChannel::postMessageToRemote):
(WebCore::MessagePortChannel::takeAllMessagesForPort):

LayoutTests:

Check that the MessageChannel does not get eagerly deallocated when transferring both of its
ports. Original test case provided with the bug report by Ashley Gullen <ashley@scirra.com>

* workers/worker-to-worker-expected.txt: Added.
* workers/worker-to-worker.html: Added.
* workers/worker-to-worker.js: Added.

Canonical link: https://commits.webkit.org/200224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230738 268f45cc-cd09-0410-ab3c-d52691b4dbfc